--- a/client/src/components/userVaild/loginSignUp.module.css
+++ b/client/src/components/userVaild/loginSignUp.module.css
@@ -5,7 +5,7 @@
     padding: 16px;
     margin: 0px auto 0 auto;
     min-width: 316px;
-    background-color: #f6f5f3;
+    background-color: #f6f5f39c;
     position: absolute;
     z-index: 10;
     left: 0;
