--- a/client/src/components/app/App.module.css
+++ b/client/src/components/app/App.module.css
@@ -1,4 +1,11 @@
 body {
+  background-image: url('https://i.pinimg.com/originals/b1/e3/5c/b1e35cd1a083c064600533f79ddb36b0.jpg');
+  /* background-repeat: no-repeat; */
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: -1;
   margin: 0px;
   padding: 0px;
 }
